# alpaka_kernels

./: CMakeLists.txt  README.md
build-cuda/: CMakeCache.txt  Makefile  cmake_install.cmake
build-cuda/tests/: Makefile  cmake_install.cmake  relu_test  selu_test  sigmoid_test  tanh_test  transpose_test
kernels/: relu_kernel.hpp  selu_kernel.hpp  sigmoid_kernel.hpp  tanh_kernel.hpp  template_kernel.hpp  transpose_kernel.hpp
tests/: CMakeLists.txt  relu_test.cpp  selu_test.cpp  sigmoid_test.cpp  tanh_test.cpp  template_test.cpp  transpose_test.cpp
